# Customer-Segmentation-for-Mall

./: LICENSE  README.md  example.ipynb
customer-segmentation/: README.rst  example.ipynb  pyproject.toml
customer-segmentation/customer_segmentation/: __init__.py  customer_segmentation.py
customer-segmentation/tests/: test_customer_segmentation.py
