[tool.poetry]
name = "customer-segmentation"
version = "0.0.1"
description = "The goal of the project is to group consumers into clusters using the elbow approach."
authors = ["Bella Martirosyan <bella.martirosyan2001@gmail.com>"]
readme = "README.rst"
packages = [{include = "customer_segmentation"}]
license = "MIT"
homepage = "https://github.com/bellamartirosyan/Customer-Segmentation-for-for-Mall"
repository = "https://github.com/bellamartirosyan/Customer-Segmentation-for-for-Mall"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
